--- a/src/components/Project.css
+++ b/src/components/Project.css
@@ -1,10 +1,12 @@
 .portfolio__projects-container__project {
 	width: 100%;
-	display: flex;
-	justify-content: space-between;
-	align-items: flex-start;
+	height: 100%;
 
-	margin: 1rem;
+	display: flex;
+	flex-direction: column;
+	background: var(--color-library);
+	filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+	border-radius: 5px;
 }
 
 .portfolio__projects-container__project-title {
@@ -43,6 +45,15 @@
 	line-height: 24px;
 	color: var(--color-text);
 }
+
+.portfolio__projects-container__project-image {
+	width: 100%;
+	background: var(--color-footer);
+}
+
+.portfolio__projects-container__project-image img {
+	width: 30%;
+}	
 
 @media screen and (max-width: 550px) {
 	.portfolio__projects-container__project h1 {
