--- a/src/containers/Projects.css
+++ b/src/containers/Projects.css
@@ -15,7 +15,7 @@
 	flex-direction: column;
 
 	text-align: left;
-	margin-right: 5rem;
+	margin-right: 1rem;
 }
 
 .portfolio__projects-heading h1 {
@@ -34,13 +34,14 @@
 	line-height: 30px;
 	color: #FF8A71;
 }
-
+/* 
+project wrapper */
 .portfolio__projects-container {
 	flex: 1.5;
+	flex-wrap: wrap;
 	display: flex;
-	justify-content: flex-start;
+	justify-content:space-around;
 	align-items: center;
-	flex-direction: column;
 }
 
 @media screen and (max-width: 990px) {
