change text inside project card to be centered

--- a/src/components/Project.css
+++ b/src/components/Project.css
@@ -5,7 +5,8 @@
   padding: 1.5rem;
   position: relative;
   display: flex;
-  align-items: flex-end;
+  align-items: center;
+  justify-content: center;
   transition: 0.4s ease-out;
   box-shadow: 0px 7px 10px rgba(black, 0.5);
 }
@@ -47,18 +48,19 @@
   opacity: 0;
   transform: translateY(30px);
   transition: 0.5s;
+  text-align: center;
 }
 
 .portfolio__projects-container__project-title {
   flex: 1;
-  max-width: 180px;
   margin: 0px;
+  margin-bottom: 1.25rem;
 }
 
 .portfolio__projects-container__project-title h1 {
   font-family: var(--font-family);
   font-weight: 800;
-  font-size: 18px;
+  font-size: 25px;
   line-height: 24px;
   letter-spacing: -0.04em;
   color: var(--color-library);
@@ -69,23 +71,20 @@
   height: 3px;
   background: var(--gradient-bar);
   box-shadow: 0 4px 4px rgba(0, 0, 0, 0.4);
-  margin-bottom: 0.25rem;
 }
 
 .portfolio__projects-container__project-link h2 {
   font-family: var(--font-family);
   font-weight: 500;
-  font-size: 14px;
+  font-size: 18px;
   line-height: 24px;
   letter-spacing: -0.04em;
   color: var(--color-library);
-  margin-top: 8px;
 }
 
 .portfolio__projects-container__project-text {
   flex: 2;
   max-width: 390px;
-  display: flex;
 }
 
 .portfolio__projects-container__project-text p {
