--- a/src/components/Project.css
+++ b/src/components/Project.css
@@ -1,6 +1,6 @@
 .portfolio__projects-container__project-card {
-  width: 360px;
-  height: 360px;
+  width: 300px;
+  height: 300px;
   border-radius: 15px;
   padding: 1.5rem;
   position: relative;
@@ -9,6 +9,7 @@
   justify-content: center;
   transition: 0.4s ease-out;
   box-shadow: 0px 7px 10px rgba(black, 0.5);
+  margin-bottom: 2rem;
 }
 
 .portfolio__projects-container__project-card:hover {
@@ -21,7 +22,6 @@
   background-color: black;
   opacity: 0.8;
 }
-
 
 .portfolio__projects-container__project-card::before {
   content: "";
@@ -46,7 +46,6 @@
 .portfolio__projects-container__project-info {
   position: relative;
   z-index: 3;
-  color: white;
   opacity: 0;
   transform: translateY(30px);
   transition: 0.5s;
@@ -62,8 +61,18 @@
 .portfolio__projects-container__project-title h1 {
   font-family: var(--font-family);
   font-weight: 800;
-  font-size: 40px;
-  color: white;
+  font-size: 2rem;
+  background: var(--gradient-text);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.portfolio__projects-container__project-title:hover h1 {
+  background: var(--color-library);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 .portfolio__projects-container__project-title div {
@@ -75,31 +84,42 @@
 
 .portfolio__projects-container__project-link h2 {
   font-family: var(--font-family);
-  font-weight: 500;
-  font-size: 25px;
+  font-weight: 800;
+  font-size: 1.25rem;
   line-height: 24px;
   margin-bottom: 1.5rem;
   letter-spacing: -0.04em;
-  color: var(--color-library);
+  background: var(--gradient-text);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
-.portfolio__projects-container__project-text {
+.portfolio__projects-container__project-link:hover h2 {
+  background: var(--color-library);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.portfolio__projects-container__project-text,
+.portfolio__projects-container__project-tech-stack {
   flex: 2;
-  max-width: 390px;
+  max-width: 290px;
 }
 
-.portfolio__projects-container__project-text p {
+.portfolio__projects-container__project-text,
+.portfolio__projects-container__project-tech-stack p {
   font-family: var(--font-family);
   font-weight: 500;
-  font-size: 14px;
+  font-size: 0.8rem;
   line-height: 24px;
   color: var(--color-text);
 }
 
-/* .portfolio__projects-container__project-image {
-  width: 100%;
-  background: var(--color-footer);
-} */
+.portfolio__projects-container__project-tech-stack p {
+  color: var(--color-subtext);
+}
 
 .portfolio__projects-container__project-image img {
   width: 100%;
@@ -113,7 +133,9 @@
 
 @media screen and (max-width: 550px) {
   .portfolio__projects-container__project h1 {
-    font-size: 14px;
+    font-size: 14
+    
+    px;
     line-height: 22px;
   }
 
