--- a/src/containers/Projects.css
+++ b/src/containers/Projects.css
@@ -1,7 +1,7 @@
 .portfolio__projects {
 	display: flex;
 	justify-content: space-between;
-	flex-direction: row;
+	flex-direction: column;
 	background-color: var(--color-library);
 	border-radius: 5px;
 	filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
@@ -13,9 +13,8 @@
 	justify-content: flex-start;
 	align-items: flex-start;
 	flex-direction: column;
-
 	text-align: left;
-	margin-right: 1rem;
+	margin: 0rem 1rem 3rem 0rem;
 }
 
 .portfolio__projects-heading h1 {
