add slideshow for photography

--- a/src/containers/Library.css
+++ b/src/containers/Library.css
@@ -1,84 +1,50 @@
 .portfolio__library {
-	display: flex;
-	flex-direction: column;
+  display: flex;
+  flex-direction: column;
+}
+
+.portfolio__library-each-slide-effect > div {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.portfolio__library-each-slide-effect img {
+  width: 30%;
 }
 
 .portfolio__library-heading {
-	width: 100%;
-	text-align: left;
-
-	margin-bottom: 5rem;
+  width: 100%;
+  text-align: left;
+  margin-bottom: 5rem;
 }
 
 .portfolio__library-heading h1 {
-	font-family: var(--font-family);
-	font-weight: 800;
-	font-size: 62px;
-	line-height: 75px;
-	letter-spacing: -0.04em;
+  font-family: var(--font-family);
+  font-weight: 800;
+  font-size: 62px;
+  line-height: 75px;
+  letter-spacing: -0.04em;
 }
 
 .portfolio__library-container {
-	display: flex;
+  display: flex;
 }
 
-.portfolio__library-container_groupA img {
-	object-fit: contain;
-}
-
-.portfolio__library-container_groupB img {
-	object-fit: contain;
-}
-
-.portfolio__library-container_groupA {
-	flex:0.75;
-	margin-right: 2rem;
-}
-
-.portfolio__library-container_groupB {
-	flex:1;
-	display: grid;
-	grid-template-columns: repeat(2,1fr);
-	grid-gap: 2rem;
-}
-
-@media screen and (max-width: 990px) {
-	.portfolio__library-container {
-		flex-direction: column-reverse;
-	}
-
-	.portfolio__library-container_groupA {
-		margin: 2rem 0;
-	}
-
-	.portfolio__library-container_groupA .portfolio__library-container_article {
-		width: 48%;
-	}
-
-	.portfolio__library-container_groupA .portfolio__library-container_article-image {
-		height: 250px;
-	}
-}
-
-
-@media screen and (max-width: 700px) {
-	.portfolio__library-container_groupB {
-		grid-template-columns: repeat(1, 1fr);
-	}
-
-	.portfolio__library-container_groupA .portfolio__library-container_article {
-		width: 100%;
-	}
-
-	.portfolio__library-heading h1 {
-		font-size: 46px;
-		line-height: 52px;
-	}
+.portfolio__library-container_article-image {
+  height: 250px;
 }
 
 @media screen and (max-width: 700px) {
-	.portfolio__library-heading h1 {
-		font-size: 34px;
-		line-height: 42px;
-	}
+  .portfolio__library-heading h1 {
+    font-size: 46px;
+    line-height: 52px;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .portfolio__library-heading h1 {
+    font-size: 34px;
+    line-height: 42px;
+  }
 }
