--- a/src/containers/Projects.css
+++ b/src/containers/Projects.css
@@ -1,61 +1,61 @@
 .portfolio__projects {
-	display: flex;
-	justify-content: space-between;
-	flex-direction: column;
-	background-color: var(--color-library);
-	border-radius: 5px;
-	filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  background-color: var(--color-library);
+  border-radius: 5px;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
 
 .portfolio__projects-heading {
-	flex: 1;
-	display: flex;
-	justify-content: flex-start;
-	align-items: flex-start;
-	flex-direction: column;
-	text-align: left;
-	margin: 0rem 1rem 3rem 0rem;
+  flex: 1;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  flex-direction: column;
+  text-align: left;
+  margin: 0rem 1rem 3rem 0rem;
 }
 
 .portfolio__projects-heading h1 {
-	font-family: var(--font-family);
-	font-style: normal;
-	font-weight: 800;
-	font-size: 34px;
-	line-height: 45px;
+  font-family: var(--font-family);
+  font-style: normal;
+  font-weight: 800;
+  font-size: 34px;
+  line-height: 45px;
 }
 
 .portfolio__projects-heading p {
-	font-family: var(--font-family);
-	font-style: normal;
-	font-weight: 500;
-	font-size: 16px;
-	line-height: 30px;
-	color: #FF8A71;
+  font-family: var(--font-family);
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 30px;
+  color: #ff8a71;
 }
 /* 
 project wrapper */
 .portfolio__projects-container {
-	flex: 1.5;
-	flex-wrap: wrap;
-	display: flex;
-	justify-content:space-around;
-	align-items: center;
+  flex: 1.5;
+  flex-wrap: wrap;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
 
 @media screen and (max-width: 990px) {
-	.portfolio__projects {
-		flex-direction: column;
-	}
+  .portfolio__projects {
+    flex-direction: column;
+  }
 
-	.portfolio__projects-heading {
-		margin: 0 0 2rem 0;
-	}
+  .portfolio__projects-heading {
+    margin: 0 0 2rem 0;
+  }
 }
 
 @media screen and (max-width: 550px) {
-	.portfolio__projects-heading h1 {
-		font-size: 28px;
-		line-height: 38px;
-	}
+  .portfolio__projects-heading h1 {
+    font-size: 28px;
+    line-height: 38px;
+  }
 }
