--- a/src/components/Timeline.css
+++ b/src/components/Timeline.css
@@ -34,6 +34,18 @@
   color: white;
 }
 
+.portfolio__experience-button-content, .portfolio__experience-button {
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  flex-direction: row;
+}
+
+.portfolio__experience-button-content img {
+  width: 5%;
+  margin-right: 0.5rem;
+}
+
 .active h2 {
   color: #f49867;
 }
@@ -52,7 +64,7 @@
 
 /* The actual timeline (the vertical ruler) */
 .portfolio__experience-timeline {
-  position: relative;
+  position: reltative;
   max-width: 1200px;
   margin: 0 auto;
 }
