--- a/src/components/Timeline.css
+++ b/src/components/Timeline.css
@@ -1,12 +1,3 @@
-.portfolio__experience {
-  display: flex;
-  flex-direction: column;
-  border-radius: 5px;
-  padding: 2rem;
-  background: var(--color-footer);
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-}
-
 .portfolio__experience-heading {
   flex: 1;
   display: flex;
@@ -15,14 +6,6 @@
   flex-direction: column;
   text-align: left;
   margin: 0rem 1rem 3rem 0rem;
-}
-
-.portfolio__experience-heading h1 {
-  font-size: 34px;
-  line-height: 45px;
-  font-weight: 800;
-  font-family: var(--font-family);
-  max-width: 510px;
 }
 
 .portfolio__experience-heading h2 {
@@ -54,17 +37,9 @@
   color: var(--color-library);
 }
 
-.portfolio__experience-container {
-  flex: 1.5;
-  flex-wrap: wrap;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-}
-
 /* The actual timeline (the vertical ruler) */
 .portfolio__experience-timeline {
-  position: reltative;
+  position: flex;
   max-width: 1200px;
   margin: 0 auto;
 }
