--- a/src/components/Timeline.css
+++ b/src/components/Timeline.css
@@ -30,7 +30,7 @@
 }
 
 .active h2 {
-  color: #f49867;
+  color: pink;
 }
 
 .inactive h2 {
@@ -40,16 +40,15 @@
 /* The actual timeline (the vertical ruler) */
 .portfolio__experience-timeline {
   position: flex;
-  max-width: 1200px;
   margin: 0 auto;
 }
 
 /* The actual timeline (the vertical ruler) */
-.timeline::after {
+.portfolio__experience-timeline::after {
   content: "";
   position: absolute;
-  width: 6px;
-  background-color: white;
+  width: 2px;
+  background-color: pink;
   top: 0;
   bottom: 0;
   left: 50%;
@@ -57,7 +56,7 @@
 }
 
 /* Container around content */
-.container {
+.portfolio__experience-timeline-container {
   padding: 10px 40px;
   position: relative;
   background-color: inherit;
@@ -65,14 +64,13 @@
 }
 
 /* The circles on the timeline */
-.container::after {
+.portfolio__experience-timeline-container::after {
   content: "";
   position: absolute;
-  width: 25px;
-  height: 25px;
-  right: -17px;
-  background-color: white;
-  border: 4px solid #ff9f55;
+  width: 12px;
+  height: 12px;
+  right: -4px;
+  background-color: pink;
   top: 15px;
   border-radius: 50%;
   z-index: 1;
@@ -88,67 +86,30 @@
   left: 50%;
 }
 
-/* Add arrows to the left container (pointing right) */
-.left::before {
-  content: " ";
-  height: 0;
-  position: absolute;
-  top: 22px;
-  width: 0;
-  z-index: 1;
-  right: 30px;
-  border: medium solid white;
-  border-width: 10px 0 10px 10px;
-  border-color: transparent transparent transparent white;
-}
-
-/* Add arrows to the right container (pointing left) */
-.right::before {
-  content: " ";
-  height: 0;
-  position: absolute;
-  top: 22px;
-  width: 0;
-  z-index: 1;
-  left: 30px;
-  border: medium solid white;
-  border-width: 10px 10px 10px 0;
-  border-color: transparent white transparent transparent;
-}
-
 /* Fix the circle for containers on the right side */
 .right::after {
-  left: -16px;
+  left: -8px;
 }
 
 /* The actual content */
-.content {
+.portfolio__experience-timeline-content {
   padding: 20px 30px;
-  background-color: white;
+  background-color: transparent;
   position: relative;
-  border-radius: 6px;
 }
 
 /* Media queries - Responsive timeline on screens less than 600px wide */
 @media screen and (max-width: 600px) {
   /* Place the timelime to the left */
-  .timeline::after {
+  .portfolio__experience-timeline::after {
     left: 31px;
   }
 
   /* Full-width containers */
-  .container {
+  .portfolio__experience-timeline-container {
     width: 100%;
     padding-left: 70px;
     padding-right: 25px;
-  }
-
-  /* Make sure that all arrows are pointing leftwards */
-  .container::before {
-    left: 60px;
-    border: medium solid white;
-    border-width: 10px 10px 10px 0;
-    border-color: transparent white transparent transparent;
   }
 
   /* Make sure all circles are at the same spot */
