add professional work experience to timeline

--- a/src/components/Timeline.css
+++ b/src/components/Timeline.css
@@ -1,4 +1,4 @@
-.portfolio__experience-container{
+.portfolio__experience-container {
   display: flex;
   flex-direction: column;
 }
@@ -10,7 +10,6 @@
   align-items: flex-start;
   flex-direction: column;
   text-align: left;
-  /* margin: 0rem 1rem 3rem 0rem; */
 }
 
 .portfolio__experience-heading h2 {
@@ -22,6 +21,21 @@
   color: white;
 }
 
+.portfolio__experience-button {
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  align-items: center;
+}
+
+.portfolio__experience-heading h3 {
+  font-family: var(--font-family);
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 45px;
+}
+
 .portfolio__experience-button-content {
   display: flex;
   flex-direction: row;
@@ -29,22 +43,16 @@
   align-items: baseline;
 }
 
-.portfolio__experience-button{
-  display: flex;
-  justify-content: center;
-  flex-direction: row;
-}
-
 .portfolio__experience-button-content img {
-  width: 5%;
+  width: 20px;
   margin-right: 0.5rem;
 }
 
-.active h2 {
+.active h3 {
   color: pink;
 }
 
-.inactive h2 {
+.inactive h3 {
   color: var(--color-library);
 }
 
@@ -104,9 +112,27 @@
 
 /* The actual content */
 .portfolio__experience-timeline-content {
-  padding: 20px 30px;
+  padding: 0px;
   background-color: transparent;
   position: relative;
+  font-family: var(--font-family);
+}
+
+.portfolio__experience-timeline-content p {
+  padding: 3px;
+}
+
+.job {
+  font-weight: 800;
+  color: pink;
+}
+
+.description {
+  color: white;
+}
+
+.date {
+  color: var(--color-library);
 }
 
 /* Media queries - Responsive timeline on screens less than 600px wide */
