--- a/src/components/Timeline.css
+++ b/src/components/Timeline.css
@@ -26,6 +26,7 @@
   justify-content: center;
   flex-direction: row;
   align-items: center;
+  gap: 1rem;
 }
 
 .portfolio__experience-heading h3 {
@@ -40,7 +41,7 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
-  align-items: baseline;
+  align-items: center;
 }
 
 .portfolio__experience-button-content img {
