add parttime timeline

--- a/src/components/Timeline.css
+++ b/src/components/Timeline.css
@@ -1,6 +1,10 @@
-.portfolio__experience-container {
+.portfolio__work-experience-container {
   display: flex;
   flex-direction: column;
+  flex: 1.5;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: center;
 }
 
 .portfolio__experience-heading {
@@ -134,6 +138,7 @@
 
 .date {
   color: var(--color-library);
+  font-weight: 500;
 }
 
 /* Media queries - Responsive timeline on screens less than 600px wide */
