--- a/src/components/Timeline.css
+++ b/src/components/Timeline.css
@@ -141,8 +141,8 @@
   font-weight: 500;
 }
 
-/* Media queries - Responsive timeline on screens less than 600px wide */
-@media screen and (max-width: 600px) {
+/* Media queries - Responsive timeline on screens less than 550px wide */
+@media screen and (max-width: 550) {
   /* Place the timelime to the left */
   .portfolio__experience-timeline::after {
     left: 31px;
